--- a/Cactus/Base.lproj/Main.storyboard
+++ b/Cactus/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Onboarding View Controller-->
         <scene sceneID="RfW-Jl-qkq">
             <objects>
-                <viewController id="EJx-Ja-QmQ" customClass="OnboardingViewController" customModule="WorkSHOP2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="EJx-Ja-QmQ" customClass="OnboardingViewController" customModule="Cactus" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bIL-Xs-buS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -39,7 +39,7 @@
                                 <color key="textColor" name="orangeColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="yBp-if-G3T">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Open Doodles" translatesAutoresizingMaskIntoConstraints="NO" id="yBp-if-G3T">
                                 <rect key="frame" x="32" y="297" width="350" height="350"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -60,7 +60,7 @@
         <!--Session View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="SessionViewController" id="BYZ-38-t0r" customClass="SessionViewController" customModule="WorkSHOP2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SessionViewController" id="BYZ-38-t0r" customClass="SessionViewController" customModule="Cactus" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -80,7 +80,6 @@
                                 </state>
                                 <connections>
                                     <action selector="buttonPlant" destination="BYZ-38-t0r" eventType="touchUpInside" id="7E4-vu-meJ"/>
-                                    <segue destination="rGD-iw-9Oe" kind="presentation" identifier="takeBreakSegue" id="Cdf-uh-AwQ"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="LC9-js-bM5">
@@ -101,13 +100,51 @@
                                 <color key="textColor" name="fontColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PtU-nn-NuY">
+                                <rect key="frame" x="0.0" y="418" width="414" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="05:41" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuD-Cl-sWw">
+                                <rect key="frame" x="35" y="418" width="344" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <color key="textColor" name="greenColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Flq-kH-E3R">
+                                <rect key="frame" x="35" y="555" width="343" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Give Up">
+                                    <color key="titleColor" name="greyColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapGiveUpButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="G2R-ln-TVH"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PfX-xA-R5d">
+                                <rect key="frame" x="35" y="515" width="344" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Cancel(x)">
+                                    <color key="titleColor" name="greyColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapCancelButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jah-iP-UVB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" name="primaryColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="cactusImage" destination="z58-p6-aDL" id="zLr-d2-UzY"/>
+                        <outlet property="cancelButton" destination="PfX-xA-R5d" id="bnB-gt-Xac"/>
+                        <outlet property="giveUpButton" destination="Flq-kH-E3R" id="qhF-Wl-ojO"/>
+                        <outlet property="pickerView" destination="PtU-nn-NuY" id="pWp-CK-tyh"/>
                         <outlet property="plantButton" destination="i0T-zA-Blk" id="YGR-T2-anG"/>
+                        <outlet property="timeLabel" destination="wuD-Cl-sWw" id="Nje-Fq-myw"/>
+                        <segue destination="rGD-iw-9Oe" kind="presentation" identifier="takeBreakSegue" id="x90-rv-bVU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -117,24 +154,27 @@
         <!--Take Break View Controller-->
         <scene sceneID="QHc-wX-Aot">
             <objects>
-                <viewController id="rGD-iw-9Oe" customClass="TakeBreakViewController" customModule="WorkSHOP2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="rGD-iw-9Oe" customClass="TakeBreakViewController" customModule="Cactus" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fU9-Lo-9nM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cactus_1" translatesAutoresizingMaskIntoConstraints="NO" id="kj7-I5-IfK">
-                                <rect key="frame" x="101" y="166" width="213" height="213"/>
+                                <rect key="frame" x="101" y="125" width="213" height="213"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RKw-X8-3be">
-                                <rect key="frame" x="35" y="695" width="344" height="56"/>
+                                <rect key="frame" x="34" y="604" width="344" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="greenColor"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Take Break">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="didTapFinishBreak" destination="rGD-iw-9Oe" eventType="touchUpInside" id="oLz-Yx-hKs"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U8X-cW-ywd">
                                 <rect key="frame" x="35" y="44" width="40" height="40"/>
@@ -172,13 +212,47 @@
                                 <color key="textColor" name="greyColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OC2-h0-5pv">
+                                <rect key="frame" x="36" y="455" width="344" height="12"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" name="greyColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="05:41" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFQ-u4-5AG">
+                                <rect key="frame" x="36" y="475" width="344" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <color key="textColor" name="greenColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hqi-N3-Dy9">
+                                <rect key="frame" x="36" y="540" width="343" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Finish break">
+                                    <color key="titleColor" name="greyColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapFinishBreakButton:" destination="rGD-iw-9Oe" eventType="touchUpInside" id="5Jg-lr-d6s"/>
+                                    <action selector="didTapGiveUpButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="WKN-Z2-iKP"/>
+                                </connections>
+                            </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aHM-9a-nt3">
+                                <rect key="frame" x="1" y="365" width="414" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" name="primaryColor"/>
                         <viewLayoutGuide key="safeArea" id="UQU-xS-8J4"/>
                     </view>
                     <connections>
                         <outlet property="cactusImage" destination="kj7-I5-IfK" id="FBG-av-ndh"/>
+                        <outlet property="countdownLabel" destination="cFQ-u4-5AG" id="C47-ub-2vb"/>
+                        <outlet property="finishBreakButton" destination="hqi-N3-Dy9" id="hOP-or-gjA"/>
+                        <outlet property="pickerView" destination="aHM-9a-nt3" id="XaV-El-Oss"/>
                         <outlet property="takeBreakButton" destination="RKw-X8-3be" id="eja-dz-Y5L"/>
+                        <outlet property="topLabel" destination="OC2-h0-5pv" id="YU9-7g-4EF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EYk-VO-niT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -188,9 +262,9 @@
     </scenes>
     <resources>
         <image name="Coin" width="24" height="24"/>
+        <image name="Open Doodles" width="336" height="208"/>
         <image name="cactus_1" width="564" height="846"/>
         <image name="dismissImage" width="14" height="14"/>
-        <image name="image1" width="336" height="208"/>
         <namedColor name="fontColor">
             <color red="0.19215686274509805" green="0.17647058823529413" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
