--- a/Cactus/Base.lproj/Main.storyboard
+++ b/Cactus/Base.lproj/Main.storyboard
@@ -122,10 +122,9 @@
                                     <action selector="didTapGiveUpButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="G2R-ln-TVH"/>
                                 </connections>
                             </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PfX-xA-R5d">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PfX-xA-R5d">
                                 <rect key="frame" x="35" y="515" width="344" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Cancel(x)">
                                     <color key="titleColor" name="greyColor"/>
                                 </state>
